# pumpkin

./: .clang-format  .editorconfig  .gitignore  .travis.yml  BUILD.bazel  LICENSE  Makefile  NOTICE  OWNERS  README.md  STYLE.md  WORKSPACE
bazel/: BUILD.bazel  android.bzl
examples/android/: BUILD.bazel
examples/android/java/pumpkin/example/: MainActivity.java
ide_support/: ij.bazelproject
licenses/: BUILD.bazel
sdks/android/core/: BUILD.bazel
sdks/android/core/java/pumpkin/core/: PumpkinSDK.java
servers/gateproxy/: BUILD.bazel
servers/gateproxy/java/pumpkin/gateproxy/: Main.java
tools/: android_requirement.txt  bazel  get_android_sdk
tools/build_defs/repo/: BUILD.bazel  maven.bzl  maybe.bzl
versions/java/: BUILD.bazel
versions/java/java/pumpkin/version/: Version.java
