# Copyright 2019 Yan Shen (aka 石头), all rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

licenses(["notice"])  # Apache v2.0

package(default_visibility = ["//visibility:private"])

genrule(
    name = "gen_android_example_manifest",
    outs = ["AndroidManifest.xml"],
    cmd = """ echo "\\
<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<manifest xmlns:android=\\"http://schemas.android.com/apk/res/android\\"
    package=\\"pumpkin.example\\">
    <application
        android:allowBackup=\\"true\\"
        android:icon=\\"@mipmap/ic_launcher\\"
        android:label=\\"@string/app_name\\"
        android:roundIcon=\\"@mipmap/ic_launcher_round\\"
        android:supportsRtl=\\"true\\"
        android:theme=\\"@style/AppTheme\\" >
        <activity android:name=\\".MainActivity\\">
            <intent-filter>
                <action android:name=\\"android.intent.action.MAIN\\"/>
                <category android:name=\\"android.intent.category.LAUNCHER\\"/>
            </intent-filter>
        </activity>
    </application>
</manifest>
"> $@""",
)

android_binary(
    name = "android",
    srcs = glob(["java/pumpkin/example/**/*.java"]),
    custom_package = "pumpkin.example",
    manifest = ":gen_android_example_manifest",
    manifest_values = {
        "minSdkVersion": "15",
    },
    resource_files = glob(["res/**"]),
    deps = [
        "//sdks/android/core",
        "//third_party/maven/android/support/constraint",
    ],
)
