# Copyright 2019 Yan Shen (aka 石头), all rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

licenses(["notice"])  # Apache v2.0

package(default_visibility = ["//visibility:public"])

genrule(
    name = "gen_android_core_sdk_manifest",
    outs = ["AndroidManifest.xml"],
    cmd = """ echo "\\
<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<manifest xmlns:android=\\"http://schemas.android.com/apk/res/android\\"
    package=\\"pumpkin.core\\">
    <uses-sdk android:minSdkVersion=\\"15\\"/>
</manifest>
"> $@""",
)

android_library(
    name = "core",
    srcs = glob(["java/pumpkin/core/**/*.java"]),
    custom_package = "pumpkin.core",
    manifest = ":gen_android_core_sdk_manifest",
    deps = [
        "//versions/java",
    ],
)
